tests/parser/pragmas/cunit.m
% (c) Copyright 2020 Florian Schanda

% This pragma applies to the entire compilation unit
% mh:debug_pragma

classdef cunit
end
